--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@azure/cognitiveservices-customvision-prediction": "^5.1.2",
     "@azure/cognitiveservices-customvision-training": "^5.2.0",
     "axios": "^0.21.1",
+    "compressing": "^1.5.1",
     "express": "^4.17.1",
+    "fs-extra": "^10.0.0",
     "image-size": "^1.0.0",
+    "ncp": "^2.0.0",
     "nodemon": "^2.0.12",
     "probe-image-size": "^7.2.1"
   },
